tests/baselines/reference/parserErrorRecovery_ParameterList3.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ParameterList3.ts (1 errors) ====
    function f(a,) {
                ~
!!! parserErrorRecovery_ParameterList3.ts(1,13): error TS1009: Trailing separator not allowed.
    }